Relative path to submit action url

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -20,7 +20,7 @@
 	<h1>Intro</h1>
 	<p>This thing makes data objects</p>
 	<h1>Input</h1>
-	<form action="/make" method="post">
+	<form action="make" method="post">
 	  <div class="form-group">
 	    <label for="abstract">Abstract</label>
 	    <textarea id="abstract" class="form-control" name="abstract" rows="10"></textarea>
