Added technical documentation, removed the scaling idea plus a little cleaning of indentation and spacing.

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -27,7 +27,7 @@
 	    <small id="abstractHelp" class="form-text text-muted">A couple of paragraphs of text</small>
 	  </div>
 	  <div class="form-group">
-	    <label for="precipitation">Precipitation</label>
+	    <label for="precipitation">Precipitation in mm</label>
 	    <input id="precipitation" name="precipitation">
 	    <small id="precipitationHelp" class="form-text text-muted">A comma separated list of numbers</small>
 	  </div>
