Refactored the interpolation innards.

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -34,7 +34,7 @@
 	  <div class="form-group">
 	    <label for="limit">Limit</label>
 	    <input id="limit" name="limit" pattern="(\d)+">
-	    <small id="limitHelp" class="form-text form-muted">Limit the object</small>
+	    <small id="limitHelp" class="form-text form-muted">Limit the of data that is used. Smaller values produce less hedgehoggy objects. Something like 10-30 seem nice values.</small>
 	  </div>
 	  <div class="form-group">
 	    <button class="btn btn-primary" name="submit">Submit</button>
