--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -40,10 +40,20 @@
 	  </div>
 	  <div class="row form-group">
 	    <label class="col-2" for="limit">Limit</label>
-	    <input class="col-3" id="limit" name="limit" pattern="(\d)+">
-	    <small class="col text-muted" id="limitHelp" class="form-text form-muted">Limit the of data that is used, &lt; 100. Smaller values produce less hedgehoggy objects. Something like 10-30 seems good</small>
+	    <input class="col-3" id="limit" name="limit" placeholder="" pattern="(\d)+">
+	    <small class="col text-muted form-text" id="limitHelp">Limit the of data that is used. Smaller values produce less <em>hedgehoggy</em> objects. Something like 10-30 seems good</small>
 	  </div>
-	  <button class="btn btn-primary">Download <code>.dat</code></button>
+	  <div class="row form-group">
+	    <label class="col-2" for="smoothing">Smoothing</label>
+	    <input class="col-3" id="smoothing" name="smoothing" placeholder="0" pattern="(\d)*">
+	    <small class="col text-muted" id="smoothingHelp">Amount of smoothing. &ge; 0</small>
+	  </div>
+	  <div class="row form-group">
+	    <label class="col-2" for="filename">File name</label>
+	    <input class="col-3" id="filename" name="filename" placeholder="dataobject.dat">
+	    <small class="col text-muted" id="filenameHelp">Optionally change filename. Consider ending in <code>.dat</code></small>
+	  </div>
+	  <button class="btn btn-primary">Download</button>
 	</form>
       </section>
     </main>
