--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -45,7 +45,7 @@
 	  </div>
 	  <div class="row form-group">
 	    <label class="col-2" for="smoothing">Smoothing</label>
-	    <input class="col-3" id="smoothing" name="smoothing" placeholder="0" pattern="(\d)*">
+	    <input class="col-3" id="smoothing" name="smoothing" placeholder="{{default_smoothing}}" pattern="(\d)*">
 	    <small class="col text-muted" id="smoothingHelp">Amount of smoothing. &ge; 0</small>
 	  </div>
 	  <div class="row form-group">
