Oops cleared some sketching which was littering HTML from the fix to #16

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -35,10 +35,7 @@
 	  </div>
 	  <div class="row form-group">
 	    <label class="col-2" for="precipitation">Precipitation</label>
-	    <input class="col-3" id="precipitation" name="precipitation" required pattern="\s*(\d*[.])?\d+(,\s*(\d*[.])?\d+)*"> -->
-
-	    \s*(\d+)(,\s*\d+)*">
-	    ([0-9]*[.])?[0-9]+
+	    <input class="col-3" id="precipitation" name="precipitation" required pattern="\s*(\d*[.])?\d+(,\s*(\d*[.])?\d+)*">
 	    <small class="col text-muted" id="precipitationHelp" class="form-text text-muted">A comma separated list of values in mm</small>
 	  </div>
 	  <div class="row form-group">
