--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -36,7 +36,12 @@
 	  <div class="row form-group">
 	    <label class="col-2" for="precipitation">Precipitation</label>
 	    <input class="col-3" id="precipitation" name="precipitation" required pattern="\s*(\d*[.])?\d+(,\s*(\d*[.])?\d+)*">
-	    <small class="col text-muted" id="precipitationHelp" class="form-text text-muted">A comma separated list of values in mm</small>
+	    <small class="col form-text text-muted" id="precipitationHelp">A comma separated list of values in mm</small>
+	  </div>
+	  <div class="row form-group">
+	    <label class="col-2" for="daylength">Day length</label>
+	    <input class="col-3" id="daylength" name="daylength" required pattern="\s*\d+:\d+">
+	    <small class="col form-text text-muted" id="daylengthHelp">Day length in <var>hours:minutes</var></small>
 	  </div>
 	  <div class="row form-group">
 	    <label class="col-2" for="limit">Limit</label>
