Scale down by a factor, as agreed on 2018-09-12 with Ben and Baki at the PIT lab. Closes #21

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -67,9 +67,11 @@
 	  <code>
 	    datafile = "<var>dataobject.dat</var>";
 	    size = 450;
-	    
-	    %cube(size);
-	    surface(file=datafile, convexity=true);
+
+	    scale(0.1) {
+	        %cube(size);
+	        surface(file=datafile, convexity=true);
+	    }
 	  </code>
 	</pre>
 	<p>Good luck!</p>
