Added ETHOS Lab logo to the web UI, and a couple of minor UI things.

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -11,18 +11,21 @@
     <header class="container">
       <div class="row bg-dark fixed-top text-white">
 	<div class="col-2">
-	  <span class="bg-white text-dark p-2 m-1">TiP</span>
+	  <span class="bg-white text-dark p-2 m-3">TiP</span>
 	</div>
-	<div class="col-10 p-1">
+	
+	<div class="col">
 	  <h5>Make a data object</h5>
 	</div>
+
+	<div id="ethos-logo" class="col-2 float-right">
+	  <img class="w-75" src="https://blogit.itu.dk/ethos/wp-content/uploads/sites/14/2018/02/TEST@2x-100-1-1024x336.jpg">
+	</div>
+	
       </div>
     </header>
 
-    <main class="container">
-      <section id="intro">
-	  <p>Intro</p>
-      </section>
+    <main class="container mt-5">
       <section id="generator">
 	<h1>Intro</h1>
 	<p>This thing makes data objects</p>
@@ -79,7 +82,7 @@
     </main>
 
     <footer class="footer">
-      <div class="col bg-light text-muted pt-5 pl-5 pr-5 pb-3 mt-5">
+      <div class="col bg-light text-muted pt-5 pl-5 pr-5 pb-3 mt-5 text-center">
 	Lovingly crafted in Copenhagen &#x1F6B2;
       </div>
     </footer>
