Added links to TiP and ETHOS Lab, plus also custom CSS file

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <title>Make a data object</title>
   </head>
 
@@ -11,7 +12,7 @@
     <header class="container">
       <div class="row bg-dark fixed-top text-white">
 	<div class="col-2">
-	  <span class="bg-white text-dark p-2 m-3">TiP</span>
+	  <a href="http://tip.itu.dk"><span id="tip-logo" class="bg-white text-dark p-2 m-3">TiP</span></a>
 	</div>
 	
 	<div class="col">
@@ -19,7 +20,7 @@
 	</div>
 
 	<div id="ethos-logo" class="col-2 float-right">
-	  <img class="w-75" src="https://blogit.itu.dk/ethos/wp-content/uploads/sites/14/2018/02/TEST@2x-100-1-1024x336.jpg">
+	  <a href="http://ethos.itu.dk"><img class="w-75" src="https://blogit.itu.dk/ethos/wp-content/uploads/sites/14/2018/02/TEST@2x-100-1-1024x336.jpg"></a>
 	</div>
 	
       </div>
