Added a little icon to indicate opening links in new tab/window #26

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -41,12 +41,12 @@
 	    <div class="row form-group">
 	      <label class="col-2" for="precipitation">Precipitation</label>
 	      <input class="col-3" id="precipitation" name="precipitation" required pattern="\s*(\d*[.])?\d+(,\s*(\d*[.])?\d+)*">
-	      <small class="col form-text text-muted" id="precipitationHelp">A comma separated list of values in mm. Get 7 * 4 values from <a href="https://www.yr.no/place/Denmark/Capital/Copenhagen/" target="_blank">Yr</a></small>
+	      <small class="col form-text text-muted" id="precipitationHelp">A comma separated list of values in mm. Get 7 * 4 values from <a href="https://www.yr.no/place/Denmark/Capital/Copenhagen/" target="_blank">Yr &#x2750;</a></small>
 	    </div>
 	    <div class="row form-group">
 	      <label class="col-2" for="daylength">Day length</label>
 	      <input class="col-3" id="daylength" name="daylength" required pattern="\s*\d+:\d+">
-	      <small class="col form-text text-muted" id="daylengthHelp">Day length in <var>hours:minutes</var>. See <em>dagens længde</em> on <a href="http://www.dmi.dk/vejr/til-lands/regionaludsigten/kbhnsjaelland/" target="_blank">DMI</a></small>
+	      <small class="col form-text text-muted" id="daylengthHelp">Day length in <var>hours:minutes</var>. See <em>dagens længde</em> on <a href="http://www.dmi.dk/vejr/til-lands/regionaludsigten/kbhnsjaelland/" target="_blank">DMI &#x2750;</a></small>
 	    </div>
 	  </div>
 	  
