Added a direct link to long term weather prediction on Yr. Closes #30

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -41,7 +41,7 @@
 	    <div class="row form-group">
 	      <label class="col-2" for="precipitation">Precipitation</label>
 	      <input class="col-3" id="precipitation" name="precipitation" required pattern="\s*(\d*[.])?\d+(,\s*(\d*[.])?\d+)*">
-	      <small class="col form-text text-muted" id="precipitationHelp">A comma separated list of values in mm. Get 7 * 4 values from <a href="https://www.yr.no/place/Denmark/Capital/Copenhagen/" target="_blank">Yr &#x2750;</a></small>
+	      <small class="col form-text text-muted" id="precipitationHelp">A comma separated list of values in mm. Get 7 * 4 values from <a href="https://www.yr.no/place/Denmark/Capital/Copenhagen/long.html" target="_blank">Yr &#x2750;</a></small>
 	    </div>
 	    <div class="row form-group">
 	      <label class="col-2" for="daylength">Day length</label>
