Added IxD lab logo, but just using they favicon because it suits the dark background. Closes #23

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -12,7 +12,7 @@
     <header class="container">
       <div class="row bg-dark fixed-top text-white">
 	<div class="col-2">
-	  <a href="http://tip.itu.dk"><span id="tip-logo" class="bg-white text-dark p-2 m-3">TiP</span></a>
+	  <a title="Technologies in Practice" href="http://tip.itu.dk"><span id="tip-logo" class="bg-white text-dark p-2 m-3">TiP</span></a>
 	</div>
 	
 	<div class="col">
@@ -20,7 +20,10 @@
 	</div>
 
 	<div id="ethos-logo" class="col-2 float-right">
-	  <a href="http://ethos.itu.dk"><img class="w-75" src="https://blogit.itu.dk/ethos/wp-content/uploads/sites/14/2018/02/TEST@2x-100-1-1024x336.jpg"></a>
+	  <a href="http://ethos.itu.dk"><img class="w-75" title="ETHOS Lab" src="https://blogit.itu.dk/ethos/wp-content/uploads/sites/14/2018/02/TEST@2x-100-1-1024x336.jpg"></a>
+	</div>
+	<div id="ixd-logo" class="col-1 float-right">
+	  <a href="https://ixdlab.itu.dk"><img class="w-75" title="IxD lab" src="https://blogit.itu.dk/ixdlab/wp-content/uploads/sites/17/favicon/favicon.ico"></a>
 	</div>
 	
       </div>
