Clarified the protocol to be a little more clear, hopefully

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -37,17 +37,17 @@
 	<ol>
 	  <li>Fill the form below to collect 3 items of data: <var>abstract</var>, <var>precipitation</var> and <var>day length</var>.</li>
 	  <li>Press <button type="button" class="btn btn-primary btn-sm" disabled>Download</button> below to get a data file.</li>
-	  <li>Open OpenSCAD program.</li>
+	  <li>Open the OpenSCAD program.</li>
 	  <li>Build the data file to a 3D model in OpenSCAD, using the program below. Set the variable <var>datafile</var> to point to the file you just downloaded, possibly something like <code>/Users/maco/Downloads/dataobject.dat</code>.</li>
 	  <li>Export the 3D model from OpenSCAD to an STL file via <em>File</em> → <em>Export►</em> → <em>Export to STL&hellip;</em></li>
-	  <li>Walk over to <a href="https://ixdlab.itu.dk/">IxD Lab</a>.</li>
+	  <li>Walk over to <a href="https://ixdlab.itu.dk/">IxD lab</a>.</li>
 	  <li>Make sure the UltiMaker 3D printer is available for a couple of hours. Be kind to your peers in that lab.</li>
-	  <li>Place the STL file on the memory card which is usually in the UltiMaker.</li>
-	  <li>Insert the memory card in the printer, and operate the printer frontpanel. The printer which will start working.</li>
+	  <li>Place the STL file on the UltiMaker memory card.</li>
+	  <li>Insert the memory card in the printer, and operate the printer frontpanel. The printer tells you how long it will take, and starts working.</li>
 	  <li>Print <a href="https://owncloud.itu.dk/index.php/apps/files/?dir=/data%20object/handout&fileid=5034237">the paper handout</a> from ownCloud.</li>
 	  <li>Fetch the ready print from the 3D printer in ~4 hours.</li>
 	</ol>
-	<p>You are ready to hand over the model to the visitor.</p>
+	<p>You are ready to hand over the model to the visitor 🙌!</p>
 	<h1>Input</h1>
 	<form action="make" method="post">
 	  <div class="required-input">
