Added suggesting a day length automatically from sunrise-sunset.org with an API call

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -63,7 +63,7 @@
 	    </div>
 	    <div class="row form-group">
 	      <label class="col-2" for="daylength">Day length</label>
-	      <input class="col-3" id="daylength" name="daylength" required pattern="\s*\d+:\d+">
+	      <input class="col-3" id="daylength" name="daylength" required placeholder="{{daylength_today}}" pattern="\s*\d+:\d+">
 	      <small class="col form-text text-muted" id="daylengthHelp">Day length in <var>hours:minutes</var> in Copenhagen. Calculate <var>Sol ned</var> - <var>Sol op</var> for København on <a href="http://www.dmi.dk/vejr/til-lands/regionaludsigten/kbhnsjaelland/" target="_blank">DMI &#x2750;</a></small>
 	    </div>
 	  </div>
