A small edit about the complement object, plus being a little more explicit about the protocol to orient the user

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -33,7 +33,7 @@
       <section id="generator">
 	<h1>Intro</h1>
 	<p>This thing makes data objects for TiP / ETHOS Lab visitors.</p>
-	<h1>Protocol</h1>
+	<h1>Protocol for making a data object</h1>
 	<ol>
 	  <li>Fill the form below to collect 3 items of data: <var>abstract</var>, <var>precipitation</var> and <var>day length</var>.</li>
 	  <li>Press <button type="button" class="btn btn-primary btn-sm" disabled>Download</button> below to get a data file.</li>
@@ -46,6 +46,7 @@
 	  <li>Insert the memory card in the printer, and operate the printer frontpanel. The printer tells you how long it will take, and starts working.</li>
 	  <li>Print <a href="https://owncloud.itu.dk/index.php/apps/files/?dir=/data%20object/handout&fileid=5034237">the paper handout</a> from ownCloud.</li>
 	  <li>Fetch the ready print from the 3D printer in ~4 hours.</li>
+	  <li>Talk to Mace about making the complement object which will stay in the ETHOS Lab.</li>
 	</ol>
 	<p>You are ready to hand over the model to the visitor 🙌!</p>
 	<h1>Input</h1>
