Added missing step with Cura to the protocol. Fixes #35. It is getting long, so there are now two, hopefully agreeing protocols – a short one and a longer one. Thanks for Sunniva for feedback.

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -34,6 +34,17 @@
 	<h1>Intro</h1>
 	<p>This thing makes data objects for TiP / ETHOS Lab visitors.</p>
 	<h1>Protocol for making a data object</h1>
+	<h2>The short version</h2>
+	<ol>
+	  <li>Fill the form below, and download the <var>.dat</var> file.</li>
+	  <li>Using OpenSCAD and the program below, export the <var>.dat</var> as an <var>STL</var> file.</li>
+	  <li>Using Cura, convert the <var>STL</var> to <var>gcode</var>.</li>
+	  <li>Go to the 3D printer, while being considerate towards your peers.</li>
+	  <li>Place the <var>.gcode</var> file on the printer's memory card, and print.</li>
+	  <li>Print <a href="https://owncloud.itu.dk/index.php/apps/files/?dir=/data%20object/handout&fileid=5034237">the paper handout</a> from ownCloud.</li>
+	  <li>Talk to Mace about making the complement object which will stay in the ETHOS Lab.</li>
+	</ol>
+	<h2>The longer version</h2>
 	<ol>
 	  <li>Fill the form below to collect 3 items of data: <var>abstract</var>, <var>precipitation</var> and <var>day length</var>.</li>
 	  <li>Press <button type="button" class="btn btn-primary btn-sm" disabled>Download</button> below to get a data file.</li>
@@ -42,7 +53,8 @@
 	  <li>Export the 3D model from OpenSCAD to an STL file via <em>File</em> → <em>Export►</em> → <em>Export to STL&hellip;</em></li>
 	  <li>Walk over to <a href="https://ixdlab.itu.dk/">IxD lab</a>.</li>
 	  <li>Make sure the UltiMaker 3D printer is available for a couple of hours. Be kind to your peers in that lab.</li>
-	  <li>Place the STL file on the UltiMaker memory card.</li>
+	  <li>Open the STL file in Cura, prepare it, and save it to the memory card as a <var>.gcode</var> file.</li>
+	  <li>Place the <var>.gcode</var> file on the UltiMaker memory card.</li>
 	  <li>Insert the memory card in the printer, and operate the printer frontpanel. The printer tells you how long it will take, and starts working.</li>
 	  <li>Print <a href="https://owncloud.itu.dk/index.php/apps/files/?dir=/data%20object/handout&fileid=5034237">the paper handout</a> from ownCloud.</li>
 	  <li>Fetch the ready print from the 3D printer in ~4 hours.</li>
