Added some more examples of possible file paths to the protocol.

--- a/make_a_data_object/templates/index.html
+++ b/make_a_data_object/templates/index.html
@@ -49,7 +49,7 @@
 	  <li>Fill the form below to collect 3 items of data: <var>abstract</var>, <var>precipitation</var> and <var>day length</var>.</li>
 	  <li>Press <button type="button" class="btn btn-primary btn-sm" disabled>Download</button> below to get a data file.</li>
 	  <li>Open the OpenSCAD program.</li>
-	  <li>Build the data file to a 3D model in OpenSCAD, using the program below. Set the variable <var>datafile</var> to point to the file you just downloaded, possibly something like <code>/Users/maco/Downloads/dataobject.dat</code>.</li>
+	  <li>Build the data file to a 3D model in OpenSCAD, using the program below. Set the variable <var>datafile</var> to point to the file you just downloaded, on OSX possibly something like <code>/Users/maco/Downloads/dataobject.dat</code>, or on Windows <code>C:/Users/maco/Downloads/dataobject.dat</code> or <code>//fs4.itu.local/redirection/maco/Downloads/dataobject.dat</code></li>
 	  <li>Export the 3D model from OpenSCAD to an STL file via <em>File</em> → <em>Export►</em> → <em>Export to STL&hellip;</em></li>
 	  <li>Walk over to <a href="https://ixdlab.itu.dk/">IxD lab</a>.</li>
 	  <li>Make sure the UltiMaker 3D printer is available for a couple of hours. Be kind to your peers in that lab.</li>
